# hydrus-api-rs

./: Cargo.toml  README.md
.github/workflows/: public.yml
src/: client.rs  error.rs  lib.rs  utils.rs
src/api_core/: access_management.rs  adding_files.rs  adding_notes.rs  adding_tags.rs  adding_urls.rs  client.rs  common.rs  managing_cookies_and_http_headers.rs  managing_pages.rs  mod.rs  searching_and_fetching_files.rs
src/api_core/endpoints/: access_management.rs  adding_files.rs  adding_notes.rs  adding_tags.rs  adding_urls.rs  client_builder.rs  managing_cookies_and_http_headers.rs  managing_pages.rs  mod.rs  searching_and_fetching_files.rs
src/endpoints/: access_management.rs  adding_files.rs  adding_tags.rs  adding_urls.rs  common.rs  mod.rs  searching_and_fetching_files.rs
src/models/: hydrus.rs  hydrus_file.rs  mod.rs  service.rs  url.rs  version.rs
src/models/builders/: import_builder.rs  mod.rs  tagging_builder.rs
src/paths/: access_management.rs  adding_files.rs  adding_tags.rs  common.rs  mod.rs
src/wrapper/: address.rs  hydrus.rs  hydrus_file.rs  mod.rs  or_chain.rs  page.rs  service.rs  tag.rs  url.rs
src/wrapper/builders/: delete_files_builder.rs  import_builder.rs  mod.rs  notes_builder.rs  or_chain_builder.rs  search_builder.rs  tag_builder.rs  tag_search_builder.rs  tagging_builder.rs
tests/: common.rs  mod.rs  test_access_management.rs  test_adding_files.rs  test_adding_tags.rs  test_adding_urls.rs  test_searching_and_fetching_files.rs
tests/client/: mod.rs  test_access_management.rs  test_adding_files.rs  test_adding_tags.rs  test_adding_urls.rs  test_deleting_notes.rs  test_managing_cookies_and_http_headers.rs  test_managing_pages.rs  test_searching_and_fetching_files.rs
tests/common/: mod.rs  test_data.rs
tests/wrapper/: mod.rs  test_address.rs  test_files.rs  test_hydrus.rs  test_import.rs  test_or_chain.rs  test_page.rs  test_service.rs  test_tags.rs  test_url.rs
