[package]
name = "hydrus-api"
version = "0.3.3"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "A rust wrapper for the hydrus client api"
repository = "https://github.com/trivernis/hydrus-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1.0", features = ["derive"]}
reqwest = {version = "0.11.4", features = ["json"]}
log = "0.4.14"
mime = "0.3.16"

[dev-dependencies]
env_logger = "0.8.4"
maplit = "1.0.2"
lazy_static = "1.4.0"

[dev-dependencies.tokio]
version = "1.8.0"
features = ["macros", "rt-multi-thread"]

[features]
rustls = ["reqwest/rustls"]