[package]
name = "hydrus-api"
version = "0.9.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "A rust wrapper for the hydrus client api"
repository = "https://github.com/trivernis/hydrus-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"]}
tracing = "0.1.32"
mime = "0.3.16"
chrono = "0.4.19"
regex = "1.5.5"
lazy_static = "1.4.0"
bytes = "1.1.0"
ciborium = {version = "0.2.0", optional = true}
serde_json = {version = "1.0.79", optional = true}
base64 = {version = "0.13.0", optional = true}

[dev-dependencies]
maplit = "1.0.2"
dotenv = "0.15.0"
tracing-subscriber = "0.3.9"

[dev-dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[features]
default = ["json"]
rustls = ["reqwest/rustls"]
cbor = ["ciborium", "base64"]
json = ["serde_json"]